--- a/react-course/src/App.css
+++ b/react-course/src/App.css
@@ -9,4 +9,55 @@
   background-color: green;
   width: 500px;
   height: 500px;
+}  */
+
+/* .box {
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.small {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.medium {
+  width: 150px;
+  height: 150px;
+  background-color: blue;
+}
+
+.large {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.box {
+  animation: slideIn 1s forwards, fadeOut 1s forwards 3s;
 } */
